--- a/web/react_web/package.json
+++ b/web/react_web/package.json
@@ -9,12 +9,14 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-baseline": "^1.0.1",
     "react-bootstrap": "^0.30.8",
+    "react-collapsible": "^1.4.0",
     "react-coverflow": "^0.2.3",
     "react-dom": "^15.4.2",
     "react-image-gallery": "^0.7.15",
     "react-image-slider": "^0.1.0",
+    "react-modal": "^1.7.7",
     "react-redux": "^5.0.3",
-    "react-responsive-carousel": "^3.1.5",
+    "react-responsive-carousel": "^3.1.17",
     "react-router-dom": "^4.0.0",
     "react-slick": "^0.14.7",
     "react-youtube": "^7.3.0",
