--- a/web/react_web/package.json
+++ b/web/react_web/package.json
@@ -9,6 +9,7 @@
     "react-addons-css-transition-group": "^15.4.2",
     "react-baseline": "^1.0.1",
     "react-bootstrap": "^0.30.8",
+    "react-burger-menu": "^2.1.1",
     "react-collapsible": "^1.4.0",
     "react-coverflow": "^0.2.3",
     "react-dom": "^15.4.2",
