--- a/web/react_web/package.json
+++ b/web/react_web/package.json
@@ -13,6 +13,7 @@
     "react-collapsible": "^1.4.0",
     "react-coverflow": "^0.2.3",
     "react-dom": "^15.4.2",
+    "react-helmet": "^5.1.3",
     "react-image-gallery": "^0.7.15",
     "react-image-slider": "^0.1.0",
     "react-modal": "^1.7.7",
@@ -24,6 +25,7 @@
     "react-youtube-player": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "scroll-into-view": "^1.9.0",
     "slick-carousel": "^1.6.0"
   },
   "devDependencies": {
